--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "classnames": "^2.2.6",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "meteor": {
     "mainModule": {
