--- a/package.json
+++ b/package.json
@@ -27,5 +27,18 @@
   },
   "devDependencies": {
     "chai": "^4.2.0"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ]
   }
 }
